# pocket-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS_STRATEGY.md  LICENSE  Makefile  README.md  SONATA_V2_VISION.md  config.example.json
.claude/: 2026-03-06-TTS-SOTA-RESEARCH.md  CLAUDE.md  MLX_INTEGRATION_RESEARCH.md  RED_TEAM_AUDIT.md  SPEAKER_ENCODER_INTEGRATION.md  STT_PERFORMANCE_AUDIT.md  TTS-RESEARCH-INDEX.md  TTS-SOTA-QUICK-REFERENCE.md  TTS_PERF_FIXES_SUMMARY.md  audit_findings.md
benchmarks/: bench_emergent_eval.py  bench_mlx_tts.py  bench_mlx_whisper.py  bench_piper.sh  bench_pocket_voice.sh  bench_sherpa_onnx.py  bench_whisper_cpp.sh  bench_whisper_cpp_harness.py  compare.py  run_all.sh
crates/sonata-cam/: Cargo.toml
crates/sonata-cfm/: Cargo.toml
crates/sonata-codec/: Cargo.toml
crates/sonata-codec/src/: decoder.rs  encoder.rs  lib.rs  quantizer.rs  snake.rs
crates/sonata-common/: Cargo.toml
crates/sonata-common/src/: adain.rs  lib.rs  mel.rs  metal.rs  quantization.rs  rope.rs  swiglu.rs
crates/sonata-integration-tests/: Cargo.toml
crates/sonata-integration-tests/src/: lib.rs
crates/sonata-integration-tests/tests/: unified_binary.rs
crates/sonata-pipeline/: Cargo.toml
crates/sonata-pipeline/src/: backchannel.rs  dual_stream.rs  ffi.rs  lib.rs  orchestrator.rs  streaming_bridge.rs
crates/sonata-pipeline/tests/: integration_pipeline.rs
crates/sonata-tts/: Cargo.toml
crates/sonata-tts/src/: emotion.rs  lib.rs  nonverbal.rs  text_encoder.rs  transformer.rs
docs/: LLM_INTEGRATION_AUDIT.md  SOTA_RESEARCH_2025-2026.md  TTS_PERFORMANCE_AUDIT.md  api.md  architecture.md  codec_12hz_design.md  index.html  models.md  troubleshooting.md  wave3_plan.md
eval/: .gitignore  README.md  requirements.txt  run_baseline.sh  run_eval.py
examples/: README.md  curl_tts.sh  websocket_client.py
scripts/: README.md  bench_e2e.py  bench_stt.py  bench_tts.py  benchmark.sh  benchmark_sweep.sh  convert_conformer_to_coreml.py  convert_kyutai_dsm.py  convert_nemo.py  convert_nemo_coreml.py  convert_nemo_tdt.py  convert_tts_weights.py  cross_validate_phonemizer.py  cross_validate_sonata.py  diagnose_sonata.py  diagnose_stt.py  eval_all.sh  eval_wer.py  export_flow_v2.py  export_flow_v3.py  export_mimi_lite_weights.py  export_phoneme_map.py  export_sonata_gguf.py  export_sonata_refiner.py  export_sonata_stt.py  export_sonata_weights.py  export_speaker_encoder.py  export_trained_models.py  extract_silero_weights.py  nemo_reference.py  normalize_text.py  prepare_interleaved_manifest.py  prove_roundtrip.py  quantize_int8.py  requirements.txt  test_codec_roundtrip.py  train_monitor.sh  validate_model.py  validate_neucodec.py
src/: amx_flow_fused.c  apple_perf.c  apple_perf.h  arena.h  audio_converter.c  audio_emotion.c  audio_emotion.h  audio_mixer.c  audio_mixer.h  audio_watermark.c  audio_watermark.h  backchannel.c  backchannel.h  bnns_conformer.c  bnns_conformer.h  bnns_convnext_decoder.c  bnns_convnext_decoder.h  bnns_mimi_decoder.c  breath_synthesis.c  breath_synthesis.h  codec_12hz.c  codec_12hz.h  conformer_stt.c  conformer_stt.h  conversation_memory.c  conversation_memory.h  ctc_beam_decoder.cpp  ctc_beam_decoder.h  deep_filter.c  deep_filter.h  emphasis_predict.c  emphasis_predict.h  fused_eou.c  fused_eou.h  http_api.c  http_api.h  intent_router.c  intent_router.h  kv_cache.h  latency_profiler.c  (+83 more)
src/llm/: Cargo.toml
src/llm/src/: lib.rs
src/local_llm/: Cargo.toml  build.rs
src/local_llm/src/: lib.rs
src/sonata_flow/: Cargo.toml  build.rs
src/sonata_flow/src/: lib.rs
src/sonata_lm/: Cargo.toml  QUANTIZATION_INTEGRATION.md  build.rs
src/sonata_lm/benches/: e2e_pipeline.rs  flow_latency.rs  lm_throughput.rs
src/sonata_lm/src/: drafter.rs  lib.rs  quant.rs
src/sonata_lm/tests/: test_quantization.rs
src/sonata_speaker/: Cargo.toml  build.rs
src/sonata_speaker/src/: lib.rs
src/sonata_storm/: Cargo.toml  build.rs
src/sonata_storm/src/: lib.rs
src/sonata_talker/: Cargo.toml
src/sonata_talker/benches/: talker_latency.rs
src/sonata_talker/src/: depth.rs  embedder.rs  lib.rs  quant.rs  stream.rs  temporal.rs  thinker_bridge.rs
src/stt/: Cargo.toml  build.rs
src/stt/src/: lib.rs
src/tts/: Cargo.toml  build.rs
src/tts/src/: lib.rs
src/whisper_turbo/: Cargo.toml
src/whisper_turbo/src/: lib.rs
tests/: bench_audit.c  bench_industry.c  bench_live.c  bench_quality  bench_sonata.c  eval_sonata_baseline.c  red_team_findings.c  test_apple_perf.c  test_assumptions.c  test_audio_converter.c  test_audio_emotion.c  test_audio_mixer.c  test_audio_watermark.c  test_backchannel.c  test_beam_search.c  test_bench_vad.c  test_bnns_convnext.c  test_bugfixes  test_bugfixes.c  test_codec_12hz.c  test_compare.c  test_conformer_stt  test_conformer_stt.c  test_conversation_memory.c  test_correctness_audit.c  test_coverage_gaps.c  test_debug_forward  test_debug_forward.c  test_deep_filter.c  test_diarizer.c  test_emphasis.c  test_eou.c  test_flow_distilled.c  test_flow_quality_modes.c  test_flow_streaming.c  test_full_duplex.c  test_full_forward  test_full_forward.c  test_fused_eou_parallel.c  test_gap_hunter_p0.c  (+74 more)
tools/: SHIP_CHECKLIST.md  SHIP_QUICKSTART.md  bench_e2e_latency.c  bench_sim_o_standalone.py  bench_speculative.c  bench_voice_cloning.py  gen_wav.c  prosody_dashboard.html  requirements.txt  ship_readiness.sh  training_dashboard.html  tts_eval_sentences.txt  validate_codec.py  validate_codec.sh  validate_tts_e2e.py  validate_tts_e2e.sh
train/: README.md  TRAINING_README.md  data.py  deploy_gce.sh  download_augmentation_data.sh  encode_mimi.py  export_candle.py  export_coreml.py  full_mimi_model.py  model.py  orchestrate.sh  quantize.py  requirements-train.txt  requirements.txt  train.py  train_cfm.py  train_codec.py  train_full_mimi.py  train_speaker_encoder.py  train_stt.py  train_tts.py
validation/: nemo_attn_out.npy  nemo_conv_out.npy  nemo_ff1_out.npy  nemo_ff2_out.npy  real_speech.pcm  ref_logits.npy  ref_mel.npy  ref_transcript.txt  speech_like.pcm  test_audio.pcm
web/: index.html
(+137 files in other folders)
