[package]
name = "sonata-common"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
tracing = { workspace = true }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
