[package]
name = "sonata-tts"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
sonata-common = { path = "../sonata-common" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
