[package]
name = "pocket-llm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "pocket_llm"

[dependencies]
candle = { version = "0.9", package = "candle-core" }
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["metal"]
metal = ["candle/metal", "candle-nn/metal"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
