[package]
name = "pocket-llm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "pocket_llm"

[dependencies]
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["metal"]
metal = ["candle/metal", "candle-nn/metal"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
