[package]
name = "pocket-llm"
version = "0.1.0"
edition = "2021"

[lib]
name = "pocket_llm"
crate-type = ["cdylib"]

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = { version = "0.21", features = ["onig"] }
safetensors = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
