[package]
name = "sonata-flow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "sonata_flow"

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hf-hub = "0.4"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
