[package]
name = "sonata-lm"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
crate-type = ["cdylib"]
name = "sonata_lm"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hf-hub = { workspace = true }

[[bin]]
name = "lm_throughput"
path = "benches/lm_throughput.rs"

[[bin]]
name = "flow_latency"
path = "benches/flow_latency.rs"

[[bin]]
name = "e2e_pipeline"
path = "benches/e2e_pipeline.rs"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]
