[package]
name = "sonata-speaker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "sonata_speaker"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]
