[package]
name = "sonata-talker"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "sonata_talker"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[[bin]]
name = "talker_latency"
path = "benches/talker_latency.rs"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]
