[package]
name = "pocket-stt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "pocket_stt"

[dependencies]
candle = { version = "0.9", package = "candle-core" }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
moshi = "0.6"
sentencepiece = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["metal"]
metal = ["candle/metal", "candle-nn/metal", "moshi/metal"]
