[package]
name = "pocket-tts-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "pocket_tts_rs"

[dependencies]
candle = { version = "0.9", package = "candle-core" }
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
hound = "3.5"
moshi = "0.6"
sentencepiece = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["metal"]
metal = ["candle/metal", "candle-nn/metal", "moshi/metal"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
